--- a/src/app/modules/main/main.component.html
+++ b/src/app/modules/main/main.component.html
@@ -4,9 +4,9 @@
     <section id="content">
       <div class="row brand-color-primary">
         <div class="col-sm-4 col-sm-offset-4 text-center logo-login">
-          <a href="https://www.riverty.com/en/">
+          <a href="https://www.riverty.com">
             <img alt="riverty"
-                 src="https://www.bertelsmann.de/media/news-und-media/bilder-news-und-pms/2022/221004-arvato-riverty/221004-riverty_teaser_2_3_lt_768_retina.jpg">
+                 src="https://www.riverty.com/static/img/icons/Logo.svg">
           </a>
         </div>
       </div>
@@ -15,7 +15,7 @@
         <div class="container container-hack">
           <div class="col-lg-4 col-lg-offset-4 col-sm-6 col-sm-offset-3 col-xs-12">
             Progress:
-            <mat-progress-bar mode="determinate" [value]="status$ | async"></mat-progress-bar>
+            <mat-progress-bar mode="determinate" [value]="100"></mat-progress-bar>
           </div>
         </div>
       </div>
